Renamed 'Package Explorer view' to 'Package Explorer'

--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -54,7 +54,7 @@
     <a href="../reference/ref-52.htm">Display view</a><br>
     <a href="../reference/ref-56.htm">Expressions view</a><br>
     <a href="../reference/ref-102.htm">Outline view for Java</a><br>
-    <a href="../reference/ref-90.htm">Package Explorer view</a><br>
+    <a href="../reference/ref-90.htm">Package Explorer</a><br>
     <a href="../reference/ref-74.htm">Variables view</a></p>
 </div>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a> 
