--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -64,7 +64,7 @@ selected element is used to feed this view.<br></p>
     <a href="../reference/ref-52.htm">Display view</a><br>
     <a href="../reference/ref-56.htm">Expressions view</a><br>
     <a href="../reference/ref-102.htm">Outline view for Java</a><br>
-    <a href="../reference/ref-90.htm">Package Explorer view</a><br>
+    <a href="../reference/ref-90.htm">Package Explorer</a><br>
     <a href="../reference/ref-74.htm">Variables view</a><br>
     <a href="../reference/ref-24.htm">Views and editors</a><br>
     <br>
