--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-7.htm
@@ -28,7 +28,7 @@
       <b>Java Editor</b> from a selection's pop-up menu in the Navigator, Package 
       Explorer or Types view </span></li>
     <li class="MsoNormal" style="color: black; ">clicking a Java file in the Navigator 
-      or Package Explorer view (see<b> </b>the <b>&nbsp;Window &gt; Preferences 
+      or Package Explorer (see<b> </b>the <b>&nbsp;Window &gt; Preferences 
       &gt; Workbench </b>preference page to choose between single and double click 
       modes)</li>
     <li class="MsoNormal" style="color: black; ">clicking a Java type, method or field 
@@ -36,13 +36,13 @@
       <b>&nbsp;Window &gt; Preferences &gt; Workbench </b>preference page to choose 
       between single and double click modes)</li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">single-clicking a currently-open 
-      Java file in the Navigator or Package Explorer view. </span></li>
+      Java file in the Navigator or Package Explorer. </span></li>
     <li class="MsoNormal" style="color: black; ">single-clicking a Java type, method 
       or field (if its compilation unit is currently open) in &nbsp;the Package 
       Explorer, Types, Members or Hierarchy view</li>
     <li class="MsoNormal" style="color: black; "><span style="font-size: 10pt; font-family: Arial; ">selecting <b>Open</b>
       from the pop-up menu of either a type or a method in the Hierarchy, Members, 
-      Types or Package Explorer view.</span></li>
+      Types or Package Explorer.</span></li>
   </ul>
   <p><img width="159" height="27" id="_x0000_i1025" src="../images/ngrelc.gif" alt="Related concepts" border="0"></p>
   <p><a href="../concepts/concepts-1.htm">Java development tools (JDT)</a></p>
