--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-101.htm
@@ -23,7 +23,7 @@ Redoing a refactoring operation</h1>
 <br><a href="tasks-84.htm">Previewing refactoring changes</a>
 <br><a href="tasks-100.htm">Undoing a refactoring operation</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<p><a href="../reference/ref-90.htm">Package Explorer view</a>
+<p><a href="../reference/ref-90.htm">Package Explorer</a>
 <br><a href="../reference/ref-102.htm">Outline view for Java</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br><a href="../reference/ref-117.htm">Refactoring wizard</a>
