--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-104.htm
@@ -21,7 +21,7 @@ Search, Outline, and Hierarchy views: The selected Java element in these
 views can be searched for declarations and references.</li>
 
 <li CLASS="Item">
-Package Explorer view: Packages, Java compilation units, types and their
+Package Explorer: Packages, Java compilation units, types and their
 members can be searched for declarations and references. If a compilation
 unit or CLA contains more than one type, a dialog prompts you to choose
 one.</li>
