--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-124.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-124.htm
@@ -13,7 +13,7 @@ Choosing a JRE for launching a project</H1>
 <P CLASS="Para">
 Instead of using the default JRE for running and debugging all Java programs in the workbench, you can specifically assign a JRE for launching an individual project.</P>
 <ol>
-  <li>In the Package Explorer view, select the Java project.</li>
+  <li>In the Package Explorer, select the Java project.</li>
   <li>From the project's pop-up menu, select <b> <SPAN CLASS="Label">
 Properties</SPAN></b>.</li>
   <li>Select the JRE properties page.</li>
@@ -46,7 +46,7 @@ debugging</a><br>
 paths</a><br>
 <a href="../tasks/tasks-119.htm">Working with JREs</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Package Explorer view</a></p>
+<p><a href="../reference/ref-90.htm">Package Explorer</a></p>
 <P><br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
