--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
@@ -20,7 +20,7 @@ In debug mode, execution may be suspended and resumed, variables may be inspecte
 </UL>
 <p>To launch a Java program:</p>
 <ol>
-  <li>In the Package Explorer view, select the Java compilation unit or class file you 
+  <li>In the Package Explorer, select the Java compilation unit or class file you 
   want to launch. </li>
   <li>
 <P CLASS="Para">
@@ -63,7 +63,7 @@ Launching with a non-default launcher</h2>
 <P CLASS="Para">
 You may also launch a program using a different launcher without having to change the default launcher for a project. </P>
 <P CLASS="Para">
-To do this, select a program or project in the Package Explorer view, then open the <b>
+To do this, select a program or project in the Package Explorer, then open the <b>
 Run</b> or <b>Debug</b> button pull-down menus to see a list of all launchers available for the chosen mode. </P>
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"></p>
 <p><a href="../concepts/concepts-6.htm">Java views</a><br>
@@ -85,7 +85,7 @@ the execution of a program</a><br>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
 <p>
 <a href="../reference/ref-51.htm">Debug view</a><br>
-<a href="../reference/ref-90.htm">Package Explorer view</a><br>
+<a href="../reference/ref-90.htm">Package Explorer</a><br>
 
 <P><br>
 
