--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-22.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-22.htm
@@ -11,7 +11,7 @@
 <H1 CLASS="Head">
 Opening the New Java Interface wizard</H1>
 <P CLASS="Para">
-From the Package Explorer view, do one of the following: </P>
+From the Package Explorer, do one of the following: </P>
 <ol CLASS="UnorderedList">
 <LI CLASS="Item">
 Select the resource where you want the new interface to reside. </LI>
@@ -62,7 +62,7 @@ compilation unit</a><br>
 <a href="../tasks/tasks-94.htm">Renaming a class, 
 field, or interface</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p><a href="../reference/ref-90.htm">Package Explorer view</a></p>
+<p><a href="../reference/ref-90.htm">Package Explorer</a></p>
 <P>&nbsp;<br>
 
 <img src = ../images/ngibmcpy.gif width="195" height="12">
