--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-25.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-25.htm
@@ -11,7 +11,7 @@
   <p class=para>An alternative way to create a new interface is to add it to an 
     existing compilation unit. To do this, </p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the Package Explorer view, double-click a compilation unit.</p>
+    </span> In the Package Explorer, double-click a compilation unit.</p>
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Type the code for the interface at the desired position in the compilation 
     unit.</p>
@@ -28,7 +28,7 @@ src="..\images\ngrelt.gif" alt="Related tasks"></p>
     <a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
