--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
@@ -11,7 +11,7 @@
   <p class=para>In a project that uses source folders, you can create a new folder 
     to contain Java source code.</p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the Package Explorer view, select the project where you want the 
+    </span> In the Package Explorer, select the project where you want the 
     new source folder to reside. </p>
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> From the project's pop-up menu, select <b>New</b> &gt; <b>Source Folder</b>.</p>
@@ -41,7 +41,7 @@ src="..\images\ngrelt.gif" alt="Related tasks"></p>
     <a href="..\tasks\tasks-12.htm">Organizing Java projects</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
