--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-4.htm
@@ -11,14 +11,14 @@
   <p class=para>To show CLASS files for inner types:</p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Select the <span class=label><b>Filters</b></span> command from the 
-    Package Explorer view drop-down menu. </p>
+    Package Explorer drop-down menu. </p>
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Ensure that the <span class=filename><b>Hide anonymous inner class 
     files</b></span>&nbsp;filter is not selected.</p>
   <p class=para>To hide CLASS files for inner types:</p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Select the <span class=label><b>Filters</b></span> command from the 
-    Package Explorer view drop-down menu.</p>
+    Package Explorer drop-down menu.</p>
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Ensure that the <span class=filename>&nbsp;<b>Hide anonymous inner 
     class files</b></span>&nbsp;filter is selected.</p>
@@ -27,7 +27,7 @@ src="..\images\ngrelt.gif" alt="Related tasks" border=0></p>
   <p class=para><a href="tasks-2.htm">Showing and hiding files</a></p>
   <p class=para><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p class=para><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p class=para><a href="..\reference\ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
     <img border=0 width=195 height=12 id="_x0000_i1027" src="..\images\ngibmcpy.gif"></p>
 </div>
