--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-47.htm
@@ -10,7 +10,7 @@
   <h1>Filtering elements</h1>
   <p class=para>To filter elements:</p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> On the Package Explorer view toolbar, click the <b>Menu</b> button 
+    </span> On the Package Explorer toolbar, click the <b>Menu</b> button 
     and choose <b>Filters</b>.</p>
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Select or clear the filters that you want to apply to the view (read 
@@ -32,7 +32,7 @@ src="..\images\ngrelt.gif" alt="Related tasks"></p>
   <p><a href="..\tasks\tasks-3.htm">Showing and hiding system files</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
