--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-51.htm
@@ -15,7 +15,7 @@ Moving folders, packages, and files</h1>
 
 <ol>
 <li>
-In the Package Explorer view, select the folder, package, or file you want
+In the Package Explorer, select the folder, package, or file you want
 to move.</li>
 
 <li>
@@ -49,7 +49,7 @@ well.</div>
 <br><a href="tasks-77.htm">Opening a package</a>
 <br><a href="..\tasks\tasks-90.htm">Renaming a package</a>
 <p><img SRC="..\images\ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1027" height=27 width=159>
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a>
+<p><a href="..\reference\ref-90.htm">Package Explorer</a>
 <br><a href="..\reference\ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
 <p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1028" height=12 width=195></div>
