--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-74.htm
@@ -3,18 +3,18 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Showing a type's compilation unit in the Package Explorer view</title>
+<title>Showing a type's compilation unit in the Package Explorer</title>
 </head>
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
-  <h1>Showing an element in the Package Explorer view</h1>
+  <h1>Showing an element in the Package Explorer</h1>
   <p class=para>You can reveal an element&#8217;s location in the Package Explorer 
     view.</p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> In the Hierarchy or Outline view, select a type or one of its members.</p>
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> From the selected element's pop-up menu, select <span
-class=label><b>Show in Package Explorer</b></span>. If the Package Explorer view 
+class=label><b>Show in Package Explorer</b></span>. If the Package Explorer 
     is not already open, then it opens in the current perspective. The workbench 
     navigates to the selected element.</p>
   <p class=para>Note: The element might not be revealed if Package Explorer filters 
@@ -27,11 +27,11 @@ alt="Related concepts" border=0></p>
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
   <p><a href="..\tasks\tasks-129.htm">Setting execution arguments</a><br>
     <a href="..\tasks\tasks-92.htm">Renaming a compilation unit</a><br>
-    <a href="..\tasks\tasks-75.htm">Opening a type in the Package Explorer view</a><br>
+    <a href="..\tasks\tasks-75.htm">Opening a type in the Package Explorer</a><br>
     <a href="..\tasks\tasks-60.htm">Organizing existing import statements</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
