--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-86.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-86.htm
@@ -18,7 +18,7 @@ To move a selected compilation unit and update all references to it:</P>
 <ol>
   <li>
 <P CLASS="Para">
-In the Package Explorer view, select a compilation unit.</P>
+In the Package Explorer, select a compilation unit.</P>
   </li>
   <li>
 <P CLASS="Para">
@@ -54,7 +54,7 @@ packages, and files</a><br>
 <a href="../tasks/tasks-85.htm">Copying and moving 
 Java elements</a></p>
 <p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"></p>
-<p dir="ltr"><a href="../reference/ref-90.htm">Package Explorer view</a><br>
+<p dir="ltr"><a href="../reference/ref-90.htm">Package Explorer</a><br>
 <a href="../reference/ref-116.htm">Refactoring 
 actions</a></p>
 <P><br>
