--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-90.htm
@@ -16,7 +16,7 @@ Renaming a package</h1>
 
 <ol>
   <li> 
-    <div CLASS="Para">In the Package Explorer or Package Explorer view, select 
+    <div CLASS="Para">In the Package Explorer or Package Explorer, select 
       the package that you want to rename.</div>
   </li>
   <li>
@@ -35,7 +35,7 @@ package..</div>
 <br><a href="tasks-15.htm">Creating a new Java package</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
 
-<p CLASS="Para"><a href="../reference/ref-90.htm">Package Explorer view</a>
+<p CLASS="Para"><a href="../reference/ref-90.htm">Package Explorer</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
 <p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
