--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-92.htm
@@ -16,7 +16,7 @@ Renaming a compilation unit</h1>
 
 <ol>
   <li> 
-    <div CLASS="Para">In the Package Explorer view, select the compilation unit 
+    <div CLASS="Para">In the Package Explorer, select the compilation unit 
       you want to rename.</div>
   </li>
   <li>
@@ -40,7 +40,7 @@ unit</a>
 <br><a href="tasks-74.htm">Showing a type's compilation unit in the Packages
 view</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<p><a href="../reference/ref-90.htm">Package Explorer view</a>
+<p><a href="../reference/ref-90.htm">Package Explorer</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
 <p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
