--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-96.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-96.htm
@@ -17,7 +17,7 @@ in the compilation unit in which it is declared. However, if you also want
 to update all references to it, you must either:</div>
 
 <ol>
-  <li> In the Package Explorer view, go to the compilation unit where the method 
+  <li> In the Package Explorer, go to the compilation unit where the method 
     is declared, and double-click it to open it in the editor.</li>
   <li> Select the method in the Outline view, from its pop-up menu, select <b>Refactor</b> 
     > <b>Rename</b>.</li>
@@ -25,7 +25,7 @@ to update all references to it, you must either:</div>
 <div CLASS="Item">or</div>
 
 <ol>
-  <li> In the Package Explorer view, go to the compilation unit where the method 
+  <li> In the Package Explorer, go to the compilation unit where the method 
     is declared, and double-click it to open it in the editor.</li>
   <li> Select the method in the Outline view and select <b>Refactor > Rename</b> 
     from the menu bar.</li>
