--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
@@ -13,7 +13,7 @@
 <h1>Creating a new Java package</h1>
 
 <p class=para>To create new Java packages in the Package Explorer or the
-Package Explorer view:</p>
+Package Explorer:</p>
 
 <p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
 tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -64,7 +64,7 @@ src="..\images\ngrelt.gif" alt="Related tasks"></p>
 <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
 
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+<p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
 
 <p>&nbsp;<br>
 <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
