--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-33.htm
@@ -10,7 +10,7 @@
   <h1>Creating a new JAR file</h1>
   <p class=para>To create a new JAR file in the workbench:</p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the Package Explorer view, you can optionally select one or more 
+    </span> In the Package Explorer, you can optionally select one or more 
     Java elements to export.</p>
   <p class=para> 2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> From the menu bar, select <b>File</b> &gt; <b>Export</b>.</p>
@@ -64,7 +64,7 @@ src="..\images\ngrelt.gif" alt="Related tasks"></p>
     <a href="..\tasks\tasks-34.htm">Setting advanced options</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
