--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-5.htm
@@ -15,7 +15,7 @@ Showing and hiding libraries</h1>
 To show libraries:
 <ol>
 <li>
-Select the <b>Filters</b> command from the Package Explorer view's drop-down
+Select the <b>Filters</b> command from the Package Explorer's drop-down
 menu.</li>
 
 <li>
@@ -24,7 +24,7 @@ Ensure that the <b>Hide referenced libraries</b> filter is not selected.</li>
 To show libraries:
 <ol>
 <li>
-Select the <b>Filters</b> command from the Package Explorer view's drop-down
+Select the <b>Filters</b> command from the Package Explorer's drop-down
 menu.</li>
 
 <li>
@@ -34,7 +34,7 @@ Ensure that the <b>Hide referenced libraries</b> filter is selected.</li>
 <p><img SRC="..\images\ngrelt.gif" ALT="Related tasks" BORDER=0 id="_x0000_i1025" height=27 width=159>
 <p><a href="..\tasks\tasks-2.htm">Showing and hiding files</a>
 <p><img SRC="..\images\ngrelr.gif" ALT="Related reference" BORDER=0 id="_x0000_i1026" height=27 width=159>
-<p><a href="..\reference\ref-90.htm">Package Explorer view</a>
+<p><a href="..\reference\ref-90.htm">Package Explorer</a>
 <br>&nbsp;
 <p><img SRC="..\images\ngibmcpy.gif" BORDER=0 id="_x0000_i1027" height=12 width=195></div>
 
