--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-62.htm
@@ -34,7 +34,7 @@ src="..\images\ngrelt.gif" alt="Related tasks"></p>
     <a href="..\tasks\tasks-64.htm">Restoring a deleted workbench element</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer view</a><br>
+  <p><a href="..\reference\ref-90.htm">Package Explorer</a><br>
     &nbsp;</p>
   <p>&nbsp;<br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
