--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-75.htm
@@ -3,12 +3,12 @@
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
 <META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
 <LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Opening a type in the Package Explorer view</title>
+<title>Opening a type in the Package Explorer</title>
 </head>
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
-  <h1>Opening a type in the Package Explorer view</h1>
-  <p class=para>You can open the Package Explorer view on any type that is included 
+  <h1>Opening a type in the Package Explorer</h1>
+  <p class=para>You can open the Package Explorer on any type that is included 
     on a project's class path.</p>
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> From the menu bar, select <b>Navigate &gt; Go To &gt; Type.</b> The 
@@ -24,7 +24,7 @@
     in the <span class=label><b>Qualifier</b></span> list.</p>
   <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Click <span class=label><b>OK</b></span> when you are done. The selected 
-    type is displayed in the Package Explorer view.</p>
+    type is displayed in the Package Explorer.</p>
   <p class=para><b>Note:</b> Revealing may not be possible if Package Explorer 
     filters are applied.</p>
   <p><img width=159 height=27 id="_x0000_i1025" src="..\images\ngrelc.gif"
@@ -33,10 +33,10 @@ alt="Related concepts" border=0></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1026"
 src="..\images\ngrelt.gif" alt="Related tasks"></p>
   <p><a href="..\tasks\tasks-74.htm">Showing a type's compilation unit in the 
-    Package Explorer view</a></p>
+    Package Explorer</a></p>
   <p><img border=0 width=159 height=27 id="_x0000_i1027"
 src="..\images\ngrelr.gif" alt="Related reference"></p>
-  <p><a href="..\reference\ref-90.htm">Package Explorer view</a></p>
+  <p><a href="..\reference\ref-90.htm">Package Explorer</a></p>
   <p>&nbsp;<br>
     <img border=0 width=195 height=12 id="_x0000_i1028" src="..\images\ngibmcpy.gif"></p>
 </div>
