--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-94.htm
@@ -19,7 +19,7 @@ you also want to update all references to it, do one of the following:</div>
 
 <ol>
 <li>
-In the Package Explorer view, double-click the compilation unit where the
+In the Package Explorer, double-click the compilation unit where the
 class or interface is declared, to open it in the editor.</li>
 
 <li>
@@ -39,7 +39,7 @@ From the editor's pop-up menu, select <b>Refactor > Rename</b></li>
 or
 <ol>
 <li>
-In the Package Explorer view, double-click the compilation unit where the
+In the Package Explorer, double-click the compilation unit where the
 class or interface is declared, to open it in the editor.</li>
 
 <li>
@@ -59,7 +59,7 @@ From the menu bar, select <b>Refactor</b> > <b>Rename</b>.</li>
 <br><a href="tasks-20.htm">Creating a class in an existing compilation
 unit</a>
 <p><img SRC="../images/ngrelr.gif" ALT="Related reference" NOSAVE BORDER=0 height=27 width=159>
-<p><a href="../reference/ref-90.htm">Package Explorer view</a>
+<p><a href="../reference/ref-90.htm">Package Explorer</a>
 <br><a href="../reference/ref-116.htm">Refactoring actions</a>
 <br>&nbsp;
 <p><img SRC="../images/ngibmcpy.gif" NOSAVE height=12 width=250>
